Запущено на серве, создан справочник званий

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div><img id="image" src="" style="margin-left: 46.5%;" width="138" height="356"></div>
     <div class="inpup"><input size="46.5%" id="label" disabled></div>
         <script src="./index.js"></script>
-        <button onClick="window.location.reload();">Обновить страницу</button>
+        <p><button onClick="window.location.reload();">Обновить страницу</button></p>
         <form class="well">
             <fieldset>
                 <legend>Цвет:</legend>
@@ -98,6 +98,7 @@
                 </div>
             </fieldset>
         </form>
-    <button onclick="generate()">Показать название</button>
+    <p><button onclick="generate()">Показать название</button></p>
+    <p><a href="spavo4.html" class="buttons">Список званий</a></p>
 </body>
 </html>    
