Добавлена логика блоксхемы вторым вариантом

--- a/mainPage.html
+++ b/mainPage.html
@@ -100,5 +100,8 @@
         </form>
     <p><button onclick="generate()">Показать название</button></p>
     <p><a href="spavo4.html" class="buttons">Список званий</a></p>
+    <li><span>
+        <a href="/questions/1qColour.html">Версия 2</a>
+    </span></li>
 </body>
 </html>    
