исправлена главная страница на index.html

--- a/questions/1qColour.html
+++ b/questions/1qColour.html
@@ -12,7 +12,7 @@
     <p>Какой цвет?</p>
     <div><a href="/questions/red2qStripes.html">Красный</a></div>
     <div><a href="/questions/green2qStars.html">Зеленый</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
     <p class="Rectangle1"></p><p class="Rectangle2"></p>
     <p class="text"><a href="/questions/green2qStars.html">Зелёный</a></p>
 </body>
