--- a/questions/green12qStripesCount11q.html
+++ b/questions/green12qStripesCount11q.html
@@ -12,7 +12,7 @@
     <p>Одна?</p>
     <div><a href="/results/9mlLetenant.html">Да</a></div>
     <div><a href="/results/13major.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
