--- a/questions/green13qWreath3q.html
+++ b/questions/green13qWreath3q.html
@@ -12,7 +12,7 @@
     <p>Есть венок?</p>
     <div><a href="/results/19generalOfArmy.html">Да</a></div>
     <div><a href="/questions/green14qEmblem13q.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
