--- a/questions/green14qEmblem13q.html
+++ b/questions/green14qEmblem13q.html
@@ -12,7 +12,7 @@
     <p>Есть герб?</p>
     <div><a href="/results/20marshalRF.html">Да</a></div>
     <div><a href="/results/16generalMajor.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
