--- a/questions/green3qStarsCount.html
+++ b/questions/green3qStarsCount.html
@@ -12,7 +12,7 @@
     <p>Одна?</p>
     <div><a href="/questions/green10qDiagonalPrintEdging3q.html">Да</a></div>
     <div><a href="/questions/green4qStarsCount2.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
