--- a/questions/green4qStarsCount2.html
+++ b/questions/green4qStarsCount2.html
@@ -11,8 +11,8 @@
 <body>
     <p>Две?</p>
     <div><a href="/questions/red2qStripes.html">Да</a></div>
-    <div><a href="/questions/2q.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><a href="/questions/green5qStarsCount3.html">Нет</a></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
