--- a/questions/green5qStarsCount3.html
+++ b/questions/green5qStarsCount3.html
@@ -12,7 +12,7 @@
     <p>Три?</p>
     <div><a href="/questions/green6qDiagonalPrintEdging.html">Да</a></div>
     <div><a href="/results/12captain.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
