--- a/questions/red3.1qStripeAlong.html
+++ b/questions/red3.1qStripeAlong.html
@@ -12,7 +12,7 @@
     <p>Вдоль?</p>
     <div><a href="/results/6starshina.html">Да</a></div>
     <div><a href="/results/5stSerjant.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
