--- a/questions/green10qDiagonalPrintEdging3q.html
+++ b/questions/green10qDiagonalPrintEdging3q.html
@@ -12,7 +12,7 @@
     <p>Есть диагональный узор и окантовка?</p>
     <div><a href="/questions/green13qWreath3q.html">Да</a></div>
     <div><a href="/questions/green11qStripes10q.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
