--- a/questions/green9qStripesEdges.html
+++ b/questions/green9qStripesEdges.html
@@ -12,7 +12,7 @@
     <p>Полосы по краям?</p>
     <div><a href="/results/8stPraporshick.html">Да</a></div>
     <div><a href="/results/15polkovnick.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
