--- a/questions/red2qStripes.html
+++ b/questions/red2qStripes.html
@@ -12,7 +12,7 @@
     <p>Есть полосы?</p>
     <div><a href="/questions/red3qStripesCount.html">Да</a></div>
     <div><a href="/results/1ryadovoy.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
