--- a/questions/red3.1qStripeThickness.html
+++ b/questions/red3.1qStripeThickness.html
@@ -12,7 +12,7 @@
     <p>Толстая?</p>
     <div><a href="/questions/red3.1qStripeAlong.html">Да</a></div>
     <div><a href="/results/2efreytor.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
