--- a/questions/red3qStripesCount.html
+++ b/questions/red3qStripesCount.html
@@ -12,7 +12,7 @@
     <p>Одна?</p>
     <div><a href="/questions/red3.1qStripeThickness.html">Да</a></div>
     <div><a href="/questions/red4qStripesCount.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
