--- a/questions/red4qStripesCount.html
+++ b/questions/red4qStripesCount.html
@@ -12,7 +12,7 @@
     <p>Две?</p>
     <div><a href="/results/3mlSerjant.html">Да</a></div>
     <div><a href="/results/4serjant.html">Нет</a></div>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
 </html>
