--- a/results/14podpolkovnick.html
+++ b/results/14podpolkovnick.html
@@ -12,6 +12,6 @@
         <img id="image" src="/images/14podpolkovnick.svg"width="69" height="178">
         <figcaption>Подполковник</figcaption>
     </figure>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 </body>
 </html>
