--- a/results/18generalPolkovnick.html
+++ b/results/18generalPolkovnick.html
@@ -12,6 +12,6 @@
         <img id="image" src="/images/18generalPolkovnick.svg"width="69" height="178">
         <figcaption>Генерал-полковник</figcaption>
     </figure>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 </body>
 </html>
