--- a/results/19generalOfArmy.html
+++ b/results/19generalOfArmy.html
@@ -12,6 +12,6 @@
         <img id="image" src="/images/19generalOfArmy.svg"width="69" height="178">
         <figcaption>Генерал армии</figcaption>
     </figure>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 </body>
 </html>
