--- a/results/20marshalRF.html
+++ b/results/20marshalRF.html
@@ -12,6 +12,6 @@
         <img id="image" src="/images/20marshallRF.svg"width="69" height="178">
         <figcaption>Маршал Российской Федерации</figcaption>
     </figure>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 </body>
 </html>
