--- a/results/3mlSerjant.html
+++ b/results/3mlSerjant.html
@@ -12,6 +12,6 @@
         <img id="image" src="/images/3mlSerjant.svg"width="69" height="178">
         <figcaption>Младший сержант</figcaption>
     </figure>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 </body>
 </html>
