--- a/results/5stSerjant.html
+++ b/results/5stSerjant.html
@@ -12,6 +12,6 @@
         <img id="image" src="/images/5stSerjant.svg"width="69" height="178">
         <figcaption>Старший сержант</figcaption>
     </figure>
-    <div><button><a href="/mainPage.html">На главную</a></button></div>
+    <div><button><a href="/index.html">На главную</a></button></div>
 </body>
 </html>
