--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="/style.css"> 
 </head>
 <body>
     <div><img id="image" src="" style="margin-left: 46.5%;" width="138" height="356"></div>
@@ -101,7 +101,7 @@
     <p><button onclick="generate()">Показать название</button></p>
     <p><a href="spavo4.html" class="buttons">Список званий</a></p>
     <li><span>
-        <a href="/questions/1qColour.html">Версия 2</a>
+        <a href="/index2.html">Версия 2</a>
     </span></li>
 </body>
 </html>    
