--- a/questions/green8qStripesCount.html
+++ b/questions/green8qStripesCount.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <p>Одна?</p>
-    <div><a href="/results/11stLetenant.html">Да</a></div>
-    <div><a href="/results/13major.html">Нет</a></div>
+    <div><a href="/results/9mlLetenant.html">Да</a></div>
+    <div><a href="/questions/green8qStripesCount.html">Нет</a></div>
     <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
