--- a/index.html
+++ b/index.html
@@ -100,8 +100,8 @@
         </form>
     <p><button onclick="generate()">Показать название</button></p>
     <p><a href="spavo4.html" class="buttons">Список званий</a></p>
-    <li><span>
-        <a href="/index2.html">Версия 2</a>
-    </span></li>
+    <span>
+        <a href="/2version.html">Версия 2</a>
+    </span>
 </body>
 </html>    
