--- a/questions/1qColour.html
+++ b/questions/1qColour.html
@@ -5,15 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="/questionsStyle.css"> 
+    <link rel="stylesheet" href="/style.css"> 
     <title>Document</title>
 </head>
 <body>
-    <p>Какой цвет?</p>
-    <div><a href="/questions/red2qStripes.html">Красный</a></div>
-    <div><a href="/questions/green2qStars.html">Зеленый</a></div>
+    <p class="questions">Какой цвет?</p>
+    <div class="questions"><a href="/questions/red2qStripes.html">Красный</a></div>
+    <div class="questions"><a href="/questions/g2qStars.html">Зеленый</a></div>
     <div><button><a href="/index.html">На главную</a></button></div>
-    <p class="Rectangle1"></p><p class="Rectangle2"></p>
-    <p class="text"><a href="/questions/green2qStars.html">Зелёный</a></p>
 </body>
 </html>
