--- a/questions/g5qStarsThree.html
+++ b/questions/g5qStarsThree.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="/style.css"> 
     <title>Document</title>
 </head>
 <body>
-    <p>Одна?</p>
-    <div><a href="/questions/green10qDiagonalPrintEdging3q.html">Да</a></div>
-    <div><a href="/questions/green4qStarsCount2.html">Нет</a></div>
+    <p class="questions">Три?</p>
+    <div class="questions"><a href="/questions/g5.1qSTDiagonalPaintEdging.html">Да</a></div>
+    <div class="questions"><a href="/results/12captain.html">Нет</a></div>
     <div><button><a href="/index.html">На главную</a></button></div>
-
 </body>
 </html>
