--- a/2version.html
+++ b/2version.html
@@ -20,12 +20,11 @@
         </div>
         <div class="overlap-group-containter">
             <div class="overlap-group1">
-                <h1 class="text-2 valign-text-middle raleway-normal-black-85px">Определитель званий</h1>
+                <div class="rectangle-3"></div>
+                <h1 class="text2">Определитель званий</h1>
             </div>
             <div class="overlap-group">
-                <div class="rectangle-4"></div>
-                <div class="text-1 texr raleway-normal-black-85px"><a href="/questions/1qColour.html">Старт</a>
-                </div>
+                <a href="/questions/1qColour.html" class="rectangle-4" class="text1">Старт</a>
             </div>
         </div>
     </div>
