--- a/questions/g4.4qSTDPESEdges.html
+++ b/questions/g4.4qSTDPESEdges.html
@@ -5,14 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="/style.css"> 
     <title>Document</title>
 </head>
 <body>
-    <p>Есть диагональный узор и окантовка?</p>
-    <div><a href="/questions/green13qWreath3q.html">Да</a></div>
-    <div><a href="/questions/green11qStripes10q.html">Нет</a></div>
+    <p class="questions">Полосы по краям?</p>
+    <div class="questions"><a href="/results/7praporshick.html">Да</a></div>
+    <div class="questions"><a href="/results/14podpolkovnick.html">Нет</a></div>
     <div><button><a href="/index.html">На главную</a></button></div>
-
 </body>
 </html>
