--- a/questions/red3.1qStripeAlong.html
+++ b/questions/red3.1qStripeAlong.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="./style.css"> 
+    <link rel="stylesheet" href="/style.css"> 
     <title>Document</title>
 </head>
 <body>
-    <p>Вдоль?</p>
-    <div><a href="/results/6starshina.html">Да</a></div>
-    <div><a href="/results/5stSerjant.html">Нет</a></div>
+    <p class="questions">Вдоль?</p>
+    <div class="questions"><a href="/results/6starshina.html">Да</a></div>
+    <div class="questions"><a href="/results/5stSerjant.html">Нет</a></div>
     <div><button><a href="/index.html">На главную</a></button></div>
 
 </body>
