--- a/results/1ryadovoy.html
+++ b/results/1ryadovoy.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Рядовой</title>
 </head>
 <body>
-    <figure class="images">
-        <img id="image" src="/images/1ryadovoy.svg"width="69" height="178">
-        <figcaption>Рядовой</figcaption>
-    </figure>
-    <div><button><a href="/index.html">На главную</a></button></div>
+    <div>
+        <figure class="images">
+            <img id="image" src="/images/1ryadovoy.svg"width="138" height="356">
+            <figcaption>Рядовой</figcaption>
+        </figure>
+        <div><button><a href="/index.html">На главную</a></button></div>
+    </div>    
 </body>
 </html>
