--- a/results/2efreytor.html
+++ b/results/2efreytor.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="/style.css">
     <title>Ефрейтор</title>
 </head>
 <body>
     <figure class="images">
-        <img id="image" src="/images/2efreytor.svg"width="69" height="178">
+        <img id="image" src="/images/2efreytor.svg"width="138" height="356">
         <figcaption>Ефрейтор</figcaption>
     </figure>
     <div><button><a href="/index.html">На главную</a></button></div>
