--- a/results/error.html
+++ b/results/error.html
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Ошибка</title>
+    <title>НЕВОЗМОЖНО</title>
 </head>
 <body>
+    <script>alert("НЕВОЗМОЖНО, бу")</script>
     <figure class="images">
-        <img id="image" src="/images/1ryadovoy.svg"width="69" height="178">
-        <figcaption>Ошибка</figcaption>
+        <img id="image" src="/images/1ryadovoy.svg"width="138" height="356">
+        <figcaption>НЕВОЗМОЖНО</figcaption>
     </figure>
     <div><button><a href="/index.html">На главную</a></button></div>
 </body>
