--- a/spavo4.html
+++ b/spavo4.html
@@ -12,87 +12,87 @@
     <div class="wrapper">
         <div class="wrapimg">
             <figure class="images">
-                <img id="image" src="/images/1ryadovoy.svg"width="69" height="178">
+                <img id="image" src="/images/1ryadovoy.svg"width="86,25" height="222,5"  >
                 <figcaption>Рядовой</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/2efreytor.svg"width="69" height="178">
+                <img id="image" src="/images/2efreytor.svg"width="86,25" height="222,5"  >
                 <figcaption>Ефрейтор</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/3mlSerjant.svg"width="69" height="178">
+                <img id="image" src="/images/3mlSerjant.svg"width="86,25" height="222,5"  >
                 <figcaption>Младший сержант</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/4serjant.svg"width="69" height="178">
+                <img id="image" src="/images/4serjant.svg"width="86,25" height="222,5"  >
                 <figcaption>Сержант</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/5stSerjant.svg"width="69" height="178">
+                <img id="image" src="/images/5stSerjant.svg"width="86,25" height="222,5"  >
                 <figcaption>Старший сержант</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/6starshina.svg"width="69" height="178">
+                <img id="image" src="/images/6starshina.svg"width="86,25" height="222,5"  >
                 <figcaption>Старшина</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/7praporshick.svg"width="69" height="178">
+                <img id="image" src="/images/7praporshick.svg"width="86,25" height="222,5"  >
                 <figcaption>Прапорщик</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/8stPraporshick.svg"width="69" height="178">
+                <img id="image" src="/images/8stPraporshick.svg"width="86,25" height="222,5"  >
                 <figcaption>Старший Прапорщик</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/9mlLetenant.svg"width="69" height="178">
+                <img id="image" src="/images/9mlLetenant.svg"width="86,25" height="222,5"  >
                 <figcaption>Младший лейтенант</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/10letenant.svg"width="69" height="178">
+                <img id="image" src="/images/10letenant.svg"width="86,25" height="222,5"  >
                 <figcaption>Лейтенант</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/11stLetenant.svg"width="69" height="178">
+                <img id="image" src="/images/11stLetenant.svg"width="86,25" height="222,5"  >
                 <figcaption>Старший лейтенант</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/12captain.svg"width="69" height="178">
+                <img id="image" src="/images/12captain.svg"width="86,25" height="222,5"  >
                 <figcaption>Капитан</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/13mayor.svg"width="69" height="178">
+                <img id="image" src="/images/13mayor.svg"width="86,25" height="222,5"  >
                 <figcaption>Майор</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/14podpolkovnick.svg"width="69" height="178">
+                <img id="image" src="/images/14podpolkovnick.svg"width="86,25" height="222,5"  >
                 <figcaption>Подполковник</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/15polkovnick.svg"width="69" height="178">
+                <img id="image" src="/images/15polkovnick.svg"width="86,25" height="222,5"  >
                 <figcaption>Полковник</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/16generalMajor.svg"width="69" height="178">
+                <img id="image" src="/images/16generalMajor.svg"width="86,25" height="222,5"  >
                 <figcaption>Генерал-майор</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/17generalLetenant.svg"width="69" height="178">
+                <img id="image" src="/images/17generalLetenant.svg"width="86,25" height="222,5"  >
                 <figcaption>Генерал-лейтенант</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/18generalPolkovnick.svg"width="69" height="178">
+                <img id="image" src="/images/18generalPolkovnick.svg"width="86,25" height="222,5"  >
                 <figcaption>Генерал-полковник</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/19generalOfArmy.svg"width="69" height="178">
+                <img id="image" src="/images/19generalOfArmy.svg"width="86,25" height="222,5"  >
                 <figcaption>Генерал армии</figcaption>
             </figure>
             <figure class="images">
-                <img id="image" src="/images/20marshallRF.svg"width="69" height="178">
+                <img id="image" src="/images/20marshallRF.svg"width="86,25" height="222,5" >
                 <figcaption>Маршал РФ</figcaption>
             </figure>
         </div>
     </div>
-    <p><a href="index.html" class="buttons">Тест</a></p>
+    <p><a href="index.html" class="buttons">Главная</a></p>
 </body>
 </html>    
