--- a/questions/1qColour.html
+++ b/questions/1qColour.html
@@ -9,6 +9,8 @@
     <title>Document</title>
 </head>
 <body>
+    <div><img id="image" src="." style="margin-left: 46.5%;" width="138" height="356"></div>
+    <script src="/index.js"></script>
     <p class="questions">Какой цвет?</p>
     <div class="questions"><a href="/questions/red2qStripes.html">Красный</a></div>
     <div class="questions"><a href="/questions/g2qStars.html">Зеленый</a></div>
