--- a/questions/g3qStarsOne.html
+++ b/questions/g3qStarsOne.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <p class="questions">Одна?</p>
-    <div class="questions"<a href="/questions/g3.1qSODiagonalPaintEdging.html">Да</a></div>
+    <div class="questions"><a href="/questions/g3.1qSODiagonalPaintEdging.html">Да</a></div>
     <div class="questions"><a href="g4qStarsTwo.html">Нет</a></div>
     <div><button><a href="/index.html">На главную</a></button></div>
 </body>
