--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="/questionsStyle.css">
+    <link rel="icon" href="../images/awardIcon.svg">
+    <link rel="stylesheet" href="questionsStyle.css">
     <title>Document</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
                 <div class="rectangle-1"></div>
                 <div class="rectangle-2"></div>
             </div>
-            <img class="image-1" src="/images/image-1.png">
+            <img class="image-1" src="../images/image-1.png">
         </div>
         <div class="overlap-group-containter">
             <div class="overlap-group1">
@@ -23,11 +23,11 @@
                 <h1 class="text2">Определитель званий</h1>
             </div>
             <div class="overlap-group">
-                <a href="/questions/1qColour.html" class="rectangle-4" class="text1">Старт</a>
+                <a href="./questions/1qColour.html" class="rectangle-4" class="text1">Старт</a>
             </div>
         </div>
     </div>
-    <p><a href="/oldVersion.html" style="float: left; margin-right: 15px;">Другая версия</a></p>
+    <p><a href="oldVersion.html" style="float: left; margin-right: 15px;">Другая версия</a></p>
     <p><a href="spavo4.html" class="buttons" style="float: left;">Список званий</a></p>
 
 </body>
