--- a/questions/1qColour.html
+++ b/questions/1qColour.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="/style.css"> 
+    <link rel="stylesheet" href="../style.css"> 
     <title>Document</title>
 </head>
 <body>
-    <div><img id="image" src="." style="margin-left: 46.5%;" width="138" height="356"></div>
-    <script src="/index.js"></script>
+    <div><img id="image" src="" style="margin-left: 46.5%;" width="138" height="356"></div>
+    <script src="../index.js"></script>
     <p class="questions">Какой цвет?</p>
     <div class="questions"><a href="/questions/red2qStripes.html">Красный</a></div>
     <div class="questions"><a href="/questions/g2qStars.html">Зеленый</a></div>
