--- a/oldVersion.html
+++ b/oldVersion.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="/style.css"> 
+    <link rel="stylesheet" href="./style.css"> 
 </head>
 <body>
     <div><img id="image" style="margin-left: 46.5%;" width="138" height="356"></div>
@@ -99,9 +99,9 @@
             </fieldset>
         </form>
     <p><button onclick="generate()">Показать название</button></p>
-    <p><a href="spavo4.html" class="buttons">Список званий</a></p>
+    <p><a href="./spavo4.html" class="buttons">Список званий</a></p>
     <span>
-        <a href="/index.html">Другая версия</a>
+        <a href="./index.html">Другая версия</a>
     </span>
 </body>
 </html>    
