--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="rectangle-1"></div>
                 <div class="rectangle-2"></div>
             </div>
-            <img class="image-1" src="../images/image-1.png">
+            <img class="image-1" src="images/image-1.png">
         </div>
         <div class="overlap-group-containter">
             <div class="overlap-group1">
