--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="../images/awardIcon.svg">
+    <link rel="icon" href="./images/awardIcon.svg">
     <link rel="stylesheet" href="questionsStyle.css">
     <title>Document</title>
 </head>
 <body>
+    
     <div class="desctop-1 screen">
         <div class="overlap-group3">
             <div class="overlap-group2">
@@ -29,6 +30,6 @@
     </div>
     <p><a href="oldVersion.html" style="float: left; margin-right: 15px;">Другая версия</a></p>
     <p><a href="spavo4.html" class="buttons" style="float: left;">Список званий</a></p>
-
+    <label class="feyhjia">фейхуя</label>
 </body>
 </html>
