--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         </div>
     </div>
     <p><a href="oldVersion.html" style="float: left; margin-right: 15px;">Другая версия</a></p>
-    <p><a href="spavo4.html" class="buttons" style="float: left;">Список званий</a></p>
-    <label class="feyhjia">фейхуя</label>
+    <p><a href="results/spavo4.html" class="buttons" style="float: left;">Список званий</a></p>
 </body>
 </html>
