--- a/oldVersion.html
+++ b/oldVersion.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./style.css"> 
 </head>
 <body>
-    <div><img id="image" style="margin-left: 46.5%;" width="138" height="356"></div>
+    <div><img id="image"style="margin-left: 46.5%;" width="138" height="356"></div>
     <div class="inpup"><input size="46.5%" id="label" disabled></div>
-        <script src="./index.js"></script>
+        <script src="index.js"></script>
         <p><button onClick="window.location.reload();">Обновить страницу</button></p>
         <form class="well">
             <fieldset>
@@ -99,9 +99,9 @@
             </fieldset>
         </form>
     <p><button onclick="generate()">Показать название</button></p>
-    <p><a href="./spavo4.html" class="buttons">Список званий</a></p>
+    <p><a href="./results/spavo4.html" class="buttons">Список званий</a></p>
     <span>
-        <a href="./index.html">Другая версия</a>
+        <a href="index.html">Основная версия</a>
     </span>
 </body>
 </html>    
