--- a/questions/red4qStripesCount.html
+++ b/questions/red4qStripesCount.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./images/awardIcon.svg">
-    <link rel="stylesheet" href="/style.css"> 
+    <link rel="stylesheet" href="../style.css"> 
     <title>Document</title>
 </head>
 <body>
+    <div><img id="image" src="../images/" style="margin-left: 46.5%;" width="138" height="356"></div>
+    <script src="../index.js"></script>
     <p class="questions">Две?</p>
-    <div class="questions"><a href="/results/3mlSerjant.html">Да</a></div>
-    <div class="questions"><a href="/results/4serjant.html">Нет</a></div>
-    <div><button><a href="/index.html">На главную</a></button></div>
+    <div class="questions"><a href="../results/3mlSerjant.html">Да</a></div>
+    <div class="questions"><a href="../results/4serjant.html">Нет</a></div>
+    <div><button><a href="../index.html">На главную</a></button></div>
 
 </body>
 </html>
