--- a/questions/1qColour.html
+++ b/questions/1qColour.html
@@ -9,11 +9,11 @@
     <title>Document</title>
 </head>
 <body>
-    <div><img id="image" src="../images/" style="margin-left: 46.5%;" width="138" height="356"></div>
+    <div><img id="image" style="margin-left: 46.5%;" width="138" height="356"></div>
     <script src="../index.js"></script>
     <p class="questions">Какой цвет?</p>
     <div class="questions"><a href="../questions/red2qStripes.html">Красный</a></div>
     <div class="questions"><a href="../questions/g2qStars.html">Зеленый</a></div>
-    <div><button><a href="/index.html">На главную</a></button></div>
+    <div><button><a href="../index.html">На главную</a></button></div>
 </body>
 </html>
