--- a/results/4serjant.html
+++ b/results/4serjant.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
+        
     <title>Сержант</title>
 </head>
 <body>
-    <figure class="images">
-        <img id="image" src="/images/4serjant.svg"width="138" height="356">
-        <figcaption>Сержант</figcaption>
-    </figure>
-    <div><button><a href="/index.html">На главную</a></button></div>
+    <p style="text-align: center;"><img id="image" src="../images/4serjant.svg"width="138" height="356"></p>
+    <figcaption style="text-align: center;">Сержант</figcaption>
+    <p><button><a href="../index.html">На главную</a></button></p>
+        
 </body>
 </html>
