stage: Убраны ненужные файлы .html

--- a/results/template.html
+++ b/results/template.html
@@ -8,8 +8,8 @@
     <title>Старшина</title>
 </head>
 <body>
-    <p style="text-align: center;"><img id="image" src="../images/6starshina.svg"width="138" height="356"></p>
-    <figcaption style="text-align: center;">Старшина</figcaption>
-    <p><button><a href="../index.html">На главную</a></button></p>
+<p style="text-align: center;"><img id="image" src="../images/file.extension"width="138" height="356"></p>
+<label style="text-align: center;">ИМЯ ПОГОНА</label>
+<p><button><a href="../index.html">На главную</a></button></p>
 </body>
 </html>
