--- a/questions/tempate.html
+++ b/questions/tempate.html
@@ -4,16 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./images/awardIcon.svg">
+    <link rel="icon" href="../images/awardIcon.svg">
     <link rel="stylesheet" href="../style.css"> 
     <title>Document</title>
 </head>
 <body>
-    <div><img id="image" src="../images/" style="margin-left: 46.5%;" width="138" height="356"></div>
+    <div><img id="image" style="margin-left: 46.5%;" width="138" height="356"></div>
     <script src="../index.js"></script>
-    <p class="questions">Одна?</p>
-    <div class="questions"><a href="../results/11stLetenant.html">Да</a></div>
-    <div class="questions"><a href="../questions/g5.4qSTDPESOEdges.html">Нет</a></div>
+    <p class="questions">ВОПРОС?</p>
     <div><button><a href="../index.html">На главную</a></button></div>
 </body>
 </html>
